# Burn-Deep-Learning-Implementations

./: .gitignore  README.md
Transformer/: .gitignore  Cargo.toml  MODEL_CARD.md  README.md
Transformer/src/: lib.rs  main.rs
Transformer/src/data/: batcher.rs  dataset.rs  mod.rs
Transformer/src/model/: attention.rs  block.rs  feedforward.rs  mod.rs  transformer.rs
Transformer/src/tokenizer/: bpe.rs  mod.rs
